--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
     "no-unused-vars": "error",
     "camelcase": "error",
     "indent": ["error", 2],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "double", { "allowTemplateLiterals": true }],
     "semi": ["error", "always"],
     "prettier/prettier": "error"
   }
